--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
@@ -15,6 +15,9 @@
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdTransaccionSession);
     @Html.HiddenFor(q => q.Estado_Proceso);
+    @Html.HiddenFor(q => q.IdActivoFijo, new { @id= "IdActivoFijo" });
+
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -325,77 +328,84 @@
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_imagen">
 
 
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-2">
 
-                <div class="col-md-2">
 
 
+                            <script type="text/javascript">
+                                function onUploadControlFileUploadComplete(s, e) {
+                                    if (e.isValid)
+                                        // $("#uploadedImage").attr("src", e.callbackData);
+                                        actualizar_div();
+                                        setElementVisible("uploadedImage", e.isValid);
+                                }
+                                function onImageLoad() {
+                                    var externalDropZone = $("#externalDropZone");
+                                    var uploadedImage = $("#uploadedImage");
+                                    uploadedImage.css({
+                                        left: (externalDropZone.width() - uploadedImage.width()) / 4,
+                                        top: (externalDropZone.height() - uploadedImage.height()) / 4
+                                    });
+                                    setElementVisible("dragZone", false);
+                                }
+                                function setElementVisible(elementId, visible) {
+                                    var el = $("#" + elementId);
+                                    if (visible)
+                                        el.show();
+                                    else
+                                        el.hide();
+                                }
+                            </script>
+                            <div id="externalDropZone" class="dropZoneExternal">
+                                <div id="dragZone">
+                                    <span class="dragZoneText">Seleccione una foto</span>
+                                </div>
+                                <img id="uploadedImage" src="~/Content/imagenes/empleados/@ViewBag.IdActivoFijo" alt="" style="display: none" onload="onImageLoad()" />
+                                <div id="dropZone" style="display: none">
+                                    <span class="dropZoneText">Drop an image here</span>
+                                </div>
+                            </div>
 
-                    <script type="text/javascript">
-                        function onUploadControlFileUploadComplete(s, e) {
-                            if (e.isValid)
-                                // $("#uploadedImage").attr("src", e.callbackData);
-                                setElementVisible("uploadedImage", e.isValid);
-                        }
-                        function onImageLoad() {
-                            var externalDropZone = $("#externalDropZone");
-                            var uploadedImage = $("#uploadedImage");
-                            uploadedImage.css({
-                                left: (externalDropZone.width() - uploadedImage.width()) / 4,
-                                top: (externalDropZone.height() - uploadedImage.height()) / 4
-                            });
-                            setElementVisible("dragZone", false);
-                        }
-                        function setElementVisible(elementId, visible) {
-                            var el = $("#" + elementId);
-                            if (visible)
-                                el.show();
-                            else
-                                el.hide();
-                        }
-                    </script>
-                    <div id="externalDropZone" class="dropZoneExternal">
-                        <div id="dragZone">
-                            <span class="dragZoneText">Seleccione una foto</span>
+                            <div class="uploadContainer">
+                                @Html.DevExpress().UploadControl(settings => {
+                               settings.ShowProgressPanel = true;
+                               settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "DragAndDropImageUpload" };
+                               settings.Name = "ucDragAndDrop";
+                               settings.UploadMode = UploadControlUploadMode.Auto;
+                               settings.AutoStartUpload = true;
+                               settings.Width = Unit.Percentage(70);
+                               settings.DialogTriggerID = "externalDropZone";
+                               settings.AdvancedModeSettings.EnableDragAndDrop = true;
+                               settings.AdvancedModeSettings.EnableFileList = false;
+                               settings.AdvancedModeSettings.EnableMultiSelect = false;
+                               settings.AdvancedModeSettings.ExternalDropZoneID = "externalDropZone";
+                               settings.AdvancedModeSettings.DropZoneText = "";
+                               settings.ValidationSettings.MaxFileSize = 4194304;
+                               settings.ValidationSettings.AllowedFileExtensions = new string[] {".jpg", ".jpeg", ".gif", ".png"};
+                               settings.ValidationSettings.ErrorStyle.CssClass = "validationMessage";
+                               settings.ClientSideEvents.FilesUploadStart = "function(s,e){nombre_imagen();}";
+
+                               settings.Styles.DropZone.CssClass = "uploadControlDropZone";
+                               settings.ClientSideEvents.DropZoneEnter = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', true); }";
+                               settings.ClientSideEvents.DropZoneLeave = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', false); }";
+                               settings.ClientSideEvents.FileUploadComplete = "onUploadControlFileUploadComplete";
+                               settings.ClientSideEvents.FileUploadComplete = "onUploadControlFileUploadComplete";
+
+                              
+                           }).GetHtml()
+                            </div>
+
                         </div>
-                        <img id="uploadedImage" src="~/Content/imagenes/empleados/@Model.IdActivoFijo" alt="" style="display: none" onload="onImageLoad()" />
-                        <div id="dropZone" style="display: none">
-                            <span class="dropZoneText">Drop an image here</span>
-                        </div>
-                    </div>
 
-                    <div class="uploadContainer">
-                        @Html.DevExpress().UploadControl(settings => {
-                       settings.ShowProgressPanel = true;
-                       settings.CallbackRouteValues = new { Controller = "Empleado", Action = "DragAndDropImageUpload" };
-                       settings.Name = "ucDragAndDrop";
-                       settings.UploadMode = UploadControlUploadMode.Auto;
-                       settings.AutoStartUpload = true;
-                       settings.Width = Unit.Percentage(70);
-                       settings.DialogTriggerID = "externalDropZone";
-                       settings.AdvancedModeSettings.EnableDragAndDrop = true;
-                       settings.AdvancedModeSettings.EnableFileList = false;
-                       settings.AdvancedModeSettings.EnableMultiSelect = false;
-                       settings.AdvancedModeSettings.ExternalDropZoneID = "externalDropZone";
-                       settings.AdvancedModeSettings.DropZoneText = "";
-                       settings.ValidationSettings.MaxFileSize = 4194304;
-                       settings.ValidationSettings.AllowedFileExtensions = new string[] {".jpg", ".jpeg", ".gif", ".png"};
-                       settings.ValidationSettings.ErrorStyle.CssClass = "validationMessage";
-                       settings.ClientSideEvents.FilesUploadStart = "OnFileUploadStart";
-                       settings.Styles.DropZone.CssClass = "uploadControlDropZone";
-                       settings.ClientSideEvents.DropZoneEnter = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', true); }";
-                       settings.ClientSideEvents.DropZoneLeave = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', false); }";
-                       settings.ClientSideEvents.FileUploadComplete = "onUploadControlFileUploadComplete";
-                   }).GetHtml()
+
+
+
                     </div>
 
                 </div>
-
-
-
-
             </div>
-
-
 
         </div>
     </div>
@@ -406,6 +416,8 @@
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
+        <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/bootstrap_imagenes.css")" />
+
     }
 }
 <script>
@@ -486,14 +498,14 @@
 
     };
 
-    function OnFileUploadStart(s, e) {
+    function nombre_imagen() {
         var datos = {
-            IdEmpresa: $("#IdEmpleado").val()
+            IdEmpresa: $("#IdActivoFijo").val()
         }
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("actualizarFoto", "ActivoFijo",new { Area = "ActivoFijo" })',
+            url: '@Url.Action("nombre_imagen", "ActivoFijo",new { Area = "ActivoFijo" })',
             async: false,
             bDeferRender: true,
             bProcessing: true,
@@ -503,6 +515,28 @@
             },
             error: function (error) {
             }
-        });        
+        });
     }
+    function actualizar_div() {
+        var datos = {
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("actualizar_div", "ActivoFijo",new { Area = "ActivoFijo" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#uploadedImage").attr("src", data);
+
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    
 </script>
