--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
@@ -1,4 +1,6 @@
-﻿@model Core.Erp.Info.ActivoFijo.Af_Activo_fijo_Info
+﻿@using System.Web.UI.WebControls;
+
+@model Core.Erp.Info.ActivoFijo.Af_Activo_fijo_Info
 @{
     ViewBag.Title = "Modificar activo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -10,10 +12,12 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "ActivoFijo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdActivoFijo)
+    @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdTransaccionSession);
     @Html.HiddenFor(q => q.Estado_Proceso);
+    @Html.HiddenFor(q => q.IdActivoFijo, new { @id = "IdActivoFijo" });
+
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -44,15 +48,17 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.DevExpress().DateEditFor(q=> q.Af_fecha_compra, settings =>
-                    {
-                        settings.Name = "Af_fecha_compra";
-                        settings.Properties.UseMaskBehavior = true;
-                        settings.Properties.EditFormat = EditFormat.Date;
-                        settings.Properties.EditFormatString = "dd/MM/yyyy";
-                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                    }).GetHtml()
+                        @Html.DevExpress().DateEditFor(q => q.Af_fecha_compra, settings =>
+                   {
+                       settings.Name = "Af_fecha_compra";
+                       settings.Properties.UseMaskBehavior = true;
+                       settings.Properties.EditFormat = EditFormat.Date;
+                       settings.Properties.EditFormatString = "dd/MM/yyyy";
+                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       settings.Properties.ClientSideEvents.DateChanged = "function(s,e){calcular_fechas();}";
+
+                   }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Af_fecha_compra, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -116,12 +122,15 @@
             </li>
             <li>
                 <a href="#tab_caracteristicas" aria-controls="caracteristicas" role="tab" data-toggle="tab">Características del activo</a>
-            </li>      
-             <li>
+            </li>
+            <li>
                 <a href="#tab_detalle" aria-controls="detalle" role="tab" data-toggle="tab">Distribución de depreciación</a>
             </li>
             <li>
                 <a href="#tab_encargado" aria-controls="encargado" role="tab" data-toggle="tab">Encargado</a>
+            </li>
+            <li>
+                <a href="#tab_imagen" aria-controls="imagen" role="tab" data-toggle="tab">Imagen</a>
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
@@ -157,15 +166,15 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </div>
-                                    @Html.DevExpress().DateEditFor(q=> q.Af_fecha_ini_depre, settings =>
-                                {
-                                    settings.Name = "Af_fecha_ini_depre";
-                                    settings.Properties.UseMaskBehavior = true;
-                                    settings.Properties.EditFormat = EditFormat.Date;
-                                    settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                }).GetHtml()
+                                    @Html.DevExpress().DateEditFor(q => q.Af_fecha_ini_depre, settings =>
+                               {
+                                   settings.Name = "Af_fecha_ini_depre";
+                                   settings.Properties.UseMaskBehavior = true;
+                                   settings.Properties.EditFormat = EditFormat.Date;
+                                   settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                   settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                               }).GetHtml()
                                     @Html.ValidationMessageFor(q => q.Af_fecha_ini_depre, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -177,15 +186,15 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </div>
-                                    @Html.DevExpress().DateEditFor(q=> q.Af_fecha_fin_depre, settings =>
-                                {
-                                    settings.Name = "Af_fecha_fin_depre";
-                                    settings.Properties.UseMaskBehavior = true;
-                                    settings.Properties.EditFormat = EditFormat.Date;
-                                    settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                                }).GetHtml()
+                                    @Html.DevExpress().DateEditFor(q => q.Af_fecha_fin_depre, settings =>
+                               {
+                                   settings.Name = "Af_fecha_fin_depre";
+                                   settings.Properties.UseMaskBehavior = true;
+                                   settings.Properties.EditFormat = EditFormat.Date;
+                                   settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                   settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                               }).GetHtml()
                                     @Html.ValidationMessageFor(q => q.Af_fecha_fin_depre, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -250,7 +259,6 @@
                                 @Html.ValidationMessageFor(q => q.IdTipoCatalogo_Ubicacion, "", new { @class = "text-danger", @id = "pe_cedulaRuc" })
                             </div>
                         </div>
-
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label for="Af_NumPlaca">Número de placa</label>
@@ -316,49 +324,123 @@
 
 
             </div>
+
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_imagen">
+
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-2">
+
+
+
+                            <script type="text/javascript">
+                                function onUploadControlFileUploadComplete(s, e) {
+                                    if (e.isValid)
+                                        // $("#uploadedImage").attr("src", e.callbackData);
+                                        // actualizar_div();
+                                        setElementVisible("uploadedImage", e.isValid);
+                                }
+                                function onImageLoad() {
+                                    var externalDropZone = $("#externalDropZone");
+                                    var uploadedImage = $("#uploadedImage");
+                                    uploadedImage.css({
+                                        left: (externalDropZone.width() - uploadedImage.width()) / 4,
+                                        top: (externalDropZone.height() - uploadedImage.height()) / 4
+                                    });
+                                    setElementVisible("dragZone", false);
+                                }
+                                function setElementVisible(elementId, visible) {
+                                    var el = $("#" + elementId);
+                                    if (visible)
+                                        el.show();
+                                    else
+                                        el.hide();
+                                }
+                            </script>
+                            <div id="externalDropZone" class="dropZoneExternal">
+                                <div id="dragZone">
+                                    <span class="dragZoneText">Seleccione una foto</span>
+                                </div>
+                                @*<img id="uploadedImage" src="~/Content/imagenes/activofijo/@ViewBag.nombre_imagen" alt="" style="display: none" onload="onImageLoad()" width="200" height="200" />*@
+                                @Html.DevExpress().BinaryImage(
+                               settings =>
+                               {
+                                   settings.Name = "pr_imagen";
+                                   settings.CallbackRouteValues = new { Controller = "Empresa", Action = "get_imagen" };
+                               }).Bind((Model.em_logo).ToArray()).GetHtml()
+                                <div id="dropZone" style="display: none">
+                                    <span class="dropZoneText">Drop an image here</span>
+                                </div>
+                            </div>
+                            <div class="uploadContainer">
+                                @Html.DevExpress().UploadControl(settings => {
+                               settings.ShowProgressPanel = true;
+                               settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "DragAndDropImageUpload" };
+                               settings.Name = "ucDragAndDrop";
+                               settings.UploadMode = UploadControlUploadMode.Auto;
+                               settings.AutoStartUpload = true;
+                               settings.Width = Unit.Percentage(70);
+                               settings.DialogTriggerID = "externalDropZone";
+                               settings.AdvancedModeSettings.EnableDragAndDrop = true;
+                               settings.AdvancedModeSettings.EnableFileList = false;
+                               settings.AdvancedModeSettings.EnableMultiSelect = false;
+                               settings.AdvancedModeSettings.ExternalDropZoneID = "externalDropZone";
+                               settings.AdvancedModeSettings.DropZoneText = "";
+                               settings.ValidationSettings.MaxFileSize = 4194304;
+                               settings.ValidationSettings.AllowedFileExtensions = new string[] { ".jpg", ".jpeg", ".gif", ".png" };
+                               settings.ValidationSettings.ErrorStyle.CssClass = "validationMessage";
+                               settings.ClientSideEvents.FilesUploadStart = "function(s,e){nombre_imagen();}";
+
+                               settings.Styles.DropZone.CssClass = "uploadControlDropZone";
+                               settings.ClientSideEvents.DropZoneEnter = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', true); }";
+                               settings.ClientSideEvents.DropZoneLeave = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', false); }";
+                               settings.ClientSideEvents.FileUploadComplete = "onUploadControlFileUploadComplete";
+
+
+                           }).GetHtml()
+                            </div>
+
+                        </div>
+
+
+
+
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </div>
-
-
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "ActivoFijo", new { Area ="ActivoFijo" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "ActivoFijo", new { Area = "ActivoFijo" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
+        <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/bootstrap_imagenes.css")" />
+
     }
 }
 <script>
     $(function () {
-        //Date picker
-        $('#Af_fecha_compra').datepicker({
-            autoclose: true
-        })
-             $('#Af_fecha_ini_depre').datepicker({
-            autoclose: true
-             })
-
-             $('#Af_fecha_fin_depre').datepicker({
-            autoclose: true
-        })
-    });
-    $(function () {
         cargar_categoria();
         get_info_tipo();
         calcular_fechas();
-
     });
 
     $("#IdActivoFijoTipo").change(function () {
         cargar_categoria();
         get_info_tipo();
         calcular_fechas();
+
     });
+
 
     function get_info_tipo() {
         var activo = $("#IdActivoFijoTipo").val();
-
         var datos = {
             IdActivoFijoTipo: activo
         }
@@ -366,7 +448,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("get_info_tipo", "ActivoFijo",new { Area = "ActivoFijo" })',
+            url: '@Url.Action("get_info_tipo", "ActivoFijo", new { Area = "ActivoFijo" })',
             async: false,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
@@ -409,6 +491,7 @@
             }
         });
     };
+
     function calcular_fechas() {
         var fecha_inicio = Af_fecha_compra.GetValue();
         Af_fecha_ini_depre.SetValue(fecha_inicio);
@@ -418,5 +501,49 @@
         Af_fecha_fin_depre.SetValue(date);
 
     };
-</script>
 
+    function nombre_imagen() {
+        var datos = {
+            IdEmpresa: $("#IdActivoFijo").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("nombre_imagen", "ActivoFijo", new { Area = "ActivoFijo" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+    }
+    function actualizar_div() {
+        var datos = {
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("actualizar_div", "ActivoFijo", new { Area = "ActivoFijo" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+
+
+                //$("#uploadedImage").load();
+              //  $("#uploadedImage").attr("src",//Url.Content(Core.Erp.Web.Helps.SessionFixed.NombreImagen));
+
+            },
+            error: function (error) {
+                    }
+                });
+    }
+
+
+</script>
