--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Modificar.cshtml
@@ -504,7 +504,7 @@
 
     function nombre_imagen() {
         var datos = {
-            IdEmpresa: $("#IdActivoFijo").val()
+            IdActivoFijo: $("#IdActivoFijo").val()
         }
         $.ajax({
             type: 'POST',
