--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
@@ -368,7 +368,7 @@
                                {
                                    settings.Name = "pr_imagen";
                                    settings.CallbackRouteValues = new { Controller = "Empresa", Action = "get_imagen" };
-                               }).Bind((Model.em_logo).ToArray()).GetHtml()
+                               }).Bind((Model.imagen_af).ToArray()).GetHtml()
                                 <div id="dropZone" style="display: none">
                                     <span class="dropZoneText">Drop an image here</span>
                                 </div>
