--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
@@ -360,7 +360,7 @@
                             </script>
                             <div id="externalDropZone" class="dropZoneExternal">
                                 <div id="dragZone">
-                                    @*<span class="dragZoneText">Seleccione una foto</span>*@
+                                    <span class="dragZoneText">Seleccione una foto</span>
                                 </div>
                                 @*<img id="uploadedImage" src="~/Content/imagenes/activofijo/@ViewBag.nombre_imagen" alt="" style="display: none" onload="onImageLoad()" width="200" height="200" />*@
                                 @Html.DevExpress().BinaryImage(
